# PromptPilot

./: .env.example  .gitignore  README.md  build.ps1  main.py  pp.spec  pyproject.toml  start.ps1  stop.ps1  Переписка.txt
.github/workflows/: release.yml
promptpilot/: __init__.py  __main__.py  api.py  bot.py  cli.py  config.py  db.py  models.py  tg_auth.py  tray.py  version.py  worker.py
promptpilot/static/: index.html
